 26. Grinder Area editor now includes Mobs and Items editors.
 26. Grinder area editor now includes a Tree selector for Areas
 27. New Planar reactions/faction, new eliteing system for planes.  See planesofexistence.txt
 28. New achievement type: AREAVISIT
 29. Planes of Existence can now be edited from CL and MudGrinder.
 30. New spells: Imprisonment
# Build 5.9.9 Release 12/18/2019
  * Minor database change: CMQUESID in CMQUESTS, CMRCID in CMGRAC, CMPKEY in CMPDAT enlarged.  Mostly optional.
  1. New prayers: empower unholy weapon, morph unholy weapon, faithful hellhound, discipline
  2. New prayers: remove inhibitions, preserve knowledge
  3. Prop_OpenCommand and Prop_CloseCommand have expanded arguments.
  4. Room-based Gathering skills now decrease yield with repeated spams of the same room.
  5. WHO list will now sort archons to the top.  WHO Account will sort by account name.
  6. Monthly TOP reports will, at the end of the month, now be saved in DBFS dir /resources/reports
  7. MUD Clients that only support 16 colors, can have 256-color ansi codes translated to 16.  See HELP ANSI.
  8. ANSI-256 color codes are now all in /resources/skills/colors.txt
  9. Shopkeeper VIEW on an ability will give it's help entry. 
 10. New command: WORTH, mostly for legacy mud support.
 11. New RPAWARDS: EMOTE-x and CHANNEL.  See coffeemud.ini file for more information
 12. Lacquering/Dyeing now support 256 colors and REMOVE, recipes updated and re-formatted.
 13. Wish now has a one rl-day cool-down.
 14. Siplet now supports ANSI-256
 15. New Scriptable command: MPCASTEXT, MPLINK, MPUNLINK, and MPPUT
 16. New MOB class: GenRideableUndead, with Raise Undead support in prayers.
 17. New internal property: ExtraData, for attaching random data to specific objects.
 18. New common skills: Master Dyeing, Master Lacquering, Improved Teaching
 19. Players >= last player level no longer gain experience above a 2% over cap.